--- a/qreport_Q1_versiontest.Rmd
+++ b/qreport_Q1_versiontest.Rmd
@@ -51,7 +51,7 @@ desi_p<- plot_ly(
   columnwidth = c(50, 30, 30, 30, 30),
   columnorder = c(0, 1, 2, 3, 4),
   header = list(
-    values = c("country","Q3 2019", "Q4 2019", "Q1 2020", "CAGR"),
+    values = c("<b>country<b>","<b>Q3 2019<b>", "<b>Q4 2019<b>", "<b>Q1 2020<b>", "<b>CAGR<b>"),
     align = c("left", "right", "right", "right", "right"),
     line = list(width = 1, color = c("rgb 168, 168, 168")),
     fill = list(color = c("rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)")),
@@ -131,7 +131,7 @@ r <- plot_ly(
   columnwidth = c(50, 30, 30, 30, 30),
   columnorder = c(0, 1, 2, 3, 4),
   header = list(
-    values = c("country","Q3 2019", "Q4 2019", "Q1 2020", "CAGR"),
+     values = c("<b>country<b>","<b>Q3 2019<b>", "<b>Q4 2019<b>", "<b>Q1 2020<b>", "<b>CAGR<b>"),
     align = c("left", "right", "right", "right", "right"),
     line = list(width = 1, color = c("rgb 168, 168, 168")),
     fill = list(color = c("rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)")),
@@ -173,9 +173,17 @@ internal$`Row Labels` <- NULL
 colnames(internal) <- as.yearqtr(colnames(internal[1:7]), format= 'Q%q_%Y') 
 names(internal)[8] <- "labels_countries" 
 
+internal <- internal %>%
+  dplyr::select(labels_countries, `2018 Q2`, `2018 Q3`, `2018 Q4`, `2019 Q1`, `2019 Q2`, `2019 Q3`, `2019 Q4`) %>%
+  dplyr::mutate(labels_countries = case_when(
+    labels_countries =="Spain & Portugal" ~ "Spain",
+    labels_countries =="Germany Region" ~ "Germany",
+    TRUE ~ labels_countries)
+  )
+
 internal1 <- internal %>%
   dplyr::select(labels_countries, `2019 Q2`, `2019 Q3`, `2019 Q4`) %>%
-  dplyr::filter(!is.na(`2019 Q4`)) %>%
+  dplyr::filter(!is.na(`2019 Q4` & `2019 Q3` & `2019 Q2`)) %>%
   dplyr::mutate(
     # Calculate CAGR
         cagr = (`2019 Q4`/`2019 Q2`)^(1/3) - 1,
@@ -192,7 +200,7 @@ internal_tab<- plot_ly(
   columnwidth = c(50, 30, 30, 30, 30),
   columnorder = c(0, 1, 2, 3, 4),
   header = list(
-    values = c("country","Q2 2019", "Q3 2019", "Q4 2019", "CAGR"),
+     values = c("<b>country<b>","<b>Q3 2019<b>", "<b>Q4 2019<b>", "<b>Q1 2020<b>", "<b>CAGR<b>"),
     align = c("left", "right", "right", "right", "right"),
     line = list(width = 1, color = c("rgb 168, 168, 168")),
     fill = list(color = c("rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)")),
@@ -225,7 +233,7 @@ internal_tab
 <div class="row">
   <div class="col-md-4" markdown="1">
   
-  **Q4**
+  **Q1**
 ```{r fun, echo=FALSE, echo=F, eval=T, fig.width=4, fig.height=3.5}
 funnel_data <- test %>%
   dplyr::select(unaided, toma, aided, fami, opinion, consideration, preference, quarter_measurement, b_value, country) %>%
@@ -274,15 +282,17 @@ funnel_plot <- funnel_data %>%
   add_trace(type = "funnel",
             y = c("Aided", "Familiarity", "Consideration", "Preference"),
             x = c(round(funnel_data$aided, digits=2), round(funnel_data$fami, digits=2), 
-                  round(funnel_data$consideration, digits=2), round(funnel_data$preference, digits=2)),
+                  round(funnel_data$consideration, digits=2), round(funnel_data$preference,
+                                                                    digits=2)),
             textposition = "inside",
             textinfo = "value",
             opacity = 1.0,
-            marker = list(color = c("rgb(255,098,000)", "rgb(255,098,000)", "rgb(255,098,000)",
-                                    "rgb(255,098,000)"),
-                          line = list(width = c(2, 2, 2, 2), color = c("white", "white", "white", "white"))),
+            marker = list(color = c("rgb(255,098,000)", "rgb(255,098,000)",
+                                    "rgb(255,098,000)", "rgb(255,098,000)"), 
+                          line = list(width = c(2, 2, 2, 2), color = c("white", "white",
+                                                                       "white", "white"))),
             textfont = list(family = "ING me", size = 14, color = "white"),
-            connector = list(line = list(color = "white"))) %>%
+            connector = list(line = list(color = "white"), fill =list(color="white"))) %>%
   layout(yaxis = list(categoryarray = c("Aided", "Familiarity", "Consideration", "Preference"),
                       tickfont =list(family = "ING me", size = 12, color = 'rgb(105, 105, 105)')),
          xaxis = list(tickfont =list(family = "ING me", size = 12, color = 'rgb(105, 105, 105)')),
@@ -902,7 +912,7 @@ p2
 <div class="row">
   <div class="col-md-4" markdown="1">
   
-  **Q4**
+  **Q1**
 ```{r funAUT, echo=FALSE, echo=F, eval=T, fig.width=4, fig.height=3.5}
 funnel_data <- test %>%
   dplyr::select(unaided, toma, aided, fami, opinion, consideration, preference, quarter_measurement, b_value, country) %>%
@@ -1576,7 +1586,7 @@ p2
 <div class="row">
   <div class="col-md-4" markdown="1">
   
-  **Q4**
+  **Q1**
 ```{r funBEL, echo=FALSE, echo=F, eval=T, fig.width=4, fig.height=3.5}
 funnel_data <- test %>%
   dplyr::select(unaided, toma, aided, fami, opinion, consideration, preference, quarter_measurement, b_value, country) %>%
@@ -2248,7 +2258,7 @@ p2
 <div class="row">
   <div class="col-md-4" markdown="1">
   
-  **Q4**
+  **Q1**
 ```{r funCZ, echo=FALSE, echo=F, eval=T, fig.width=4, fig.height=3.5}
 funnel_data <- test %>%
   dplyr::select(unaided, toma, aided, fami, opinion, consideration, preference, quarter_measurement, b_value, country) %>%
@@ -2813,7 +2823,7 @@ es
 <div class="row">
   <div class="col-md-4" markdown="1">
   
-  **Q4**
+  **Q1**
 ```{r funFR, echo=FALSE, echo=F, eval=T, fig.width=4, fig.height=3.5}
 funnel_data <- test %>%
   dplyr::select(unaided, toma, aided, fami, opinion, consideration, preference, quarter_measurement, b_value, country) %>%
@@ -3487,7 +3497,7 @@ p2
 <div class="row">
   <div class="col-md-4" markdown="1">
   
-  **Q4**
+  **Q1**
 ```{r funGE, echo=FALSE, echo=F, eval=T, fig.width=4, fig.height=3.5}
 funnel_data <- test %>%
   dplyr::select(unaided, toma, aided, fami, opinion, consideration, preference, quarter_measurement, b_value, country) %>%
@@ -4162,7 +4172,7 @@ p2
 <div class="row">
   <div class="col-md-4" markdown="1">
   
-  **Q4**
+  **Q1**
 ```{r funIT, echo=FALSE, echo=F, eval=T, fig.width=4, fig.height=3.5}
 funnel_data <- test %>%
   dplyr::select(unaided, toma, aided, fami, opinion, consideration, preference, quarter_measurement, b_value, country) %>%
@@ -4837,7 +4847,7 @@ p2
 <div class="row">
   <div class="col-md-4" markdown="1">
   
-  **Q4**
+  **Q1**
 ```{r funLUX, echo=FALSE, echo=F, eval=T, fig.width=4, fig.height=3.5}
 funnel_data <- test %>%
   dplyr::select(unaided, toma, aided, fami, opinion, consideration, preference, quarter_measurement, b_value, country) %>%
@@ -5511,7 +5521,7 @@ p2
 <div class="row">
   <div class="col-md-4" markdown="1">
   
-  **Q4**
+  **Q1**
 ```{r funNL, echo=FALSE, echo=F, eval=T, fig.width=4, fig.height=3.5}
 funnel_data <- test %>%
   dplyr::select(unaided, toma, aided, fami, opinion, consideration, preference, quarter_measurement, b_value, country) %>%
@@ -6182,7 +6192,7 @@ p2
 <div class="row">
   <div class="col-md-4" markdown="1">
   
-  **Q4**
+  **Q1**
 ```{r funPOl, echo=FALSE, echo=F, eval=T, fig.width=4, fig.height=3.5}
 funnel_data <- test %>%
   dplyr::select(unaided, toma, aided, fami, opinion, consideration, preference, quarter_measurement, b_value, country) %>%
@@ -6856,7 +6866,7 @@ p2
 <div class="row">
   <div class="col-md-4" markdown="1">
   
-  **Q4**
+  **Q1**
 ```{r funROM, echo=FALSE, echo=F, eval=T, fig.width=4, fig.height=3.5}
 funnel_data <- test %>%
   dplyr::select(unaided, toma, aided, fami, opinion, consideration, preference, quarter_measurement, b_value, country) %>%
@@ -7530,7 +7540,7 @@ p2
 <div class="row">
   <div class="col-md-4" markdown="1">
   
-  **Q4**
+  **Q1**
 ```{r funSP, echo=FALSE, echo=F, eval=T, fig.width=4, fig.height=3.5}
 funnel_data <- test %>%
   dplyr::select(unaided, toma, aided, fami, opinion, consideration, preference, quarter_measurement, b_value, country) %>%
@@ -8204,7 +8214,7 @@ p2
 <div class="row">
   <div class="col-md-4" markdown="1">
   
-  **Q4**
+  **Q1**
 ```{r funTUR, echo=FALSE, echo=F, eval=T, fig.width=4, fig.height=3.5}
 funnel_data <- test %>%
   dplyr::select(unaided, toma, aided, fami, opinion, consideration, preference, quarter_measurement, b_value, country) %>%
@@ -9155,7 +9165,7 @@ desi_comb <- test %>%
   dplyr::filter(quarter_measurement ==21 & country==14) %>%
   dplyr::mutate(
     desirability = desirability,
-    price_mean = price_mean *100
+    price_mean = price_mean
   ) %>%
   distinct()
 
