--- a/qreport_Q1_versiontest.Rmd
+++ b/qreport_Q1_versiontest.Rmd
@@ -102,7 +102,10 @@ rep <- test %>%
       country == 14 ~ pulse,
       TRUE ~ NA_real_)
   ) %>%
-  distinct()
+  dplyr::mutate(pulse = case_when(
+    country ==14 & quarter_measurement==19 ~ pulse /1.603,
+    TRUE ~ pulse
+  )) 
 rep_CAGR <- test %>%
   dplyr::select(quarter_measurement, country, b_value, pulse) %>%
   dplyr::filter(quarter_measurement >17 & b_value==1) %>%
@@ -1430,17 +1433,17 @@ yaxis <- list(title = "Primary customer *1000",
                               size = 12,
                               color = 'rgb(105, 105, 105)'),
               showline = TRUE,
-              showgrid = FALSE,
-              range =c(100.000:2000.000),
+              #showgrid = FALSE,
+              range =c(10.000:2000.000),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
               autotick = FALSE,
-              dtick = 50.000,
+              dtick = 10,
               ticks = 'inside',
               tickcolor = 'rgb(204, 204, 204)',
-              tickwidth = 1,
-              ticklen = 1,
+              #tickwidth = 1,
+              #ticklen = 1,
               tickfont = list(family = "ING me",
                               size = 12,
                               color = 'rgb(105, 105, 105)'))
@@ -2084,7 +2087,7 @@ yaxis <- list(title = "Primary customer *1000",
                               color = 'rgb(105, 105, 105)'),
               showline = TRUE,
               showgrid = FALSE,
-              range =c(50.000,3000.000),
+              range =c(50.000,2000.000),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -2138,7 +2141,7 @@ xaxis <- list(title = "",
 yaxis <- list(title = "",
               showline = TRUE,
               showgrid = TRUE,
-              range =c(1:8),
+              range =c(1,5),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -2804,7 +2807,7 @@ funnel_plot
   
    **Delta best - ING**
    
-```{r tabFR, echo=FALSE, echo=F, eval=T, fig.width=1.5, fig.height=3, fig.align='center'}
+```{r tabFR, echo=FALSE, echo=F, eval=T, fig.width=1.2, fig.height=3, fig.align='center'}
 tab <- plot_ly(
   type = 'table',
   columnwidth = c(1),
@@ -3288,7 +3291,7 @@ yaxis <- list(title = "Primary customer *1000",
                               color = 'rgb(105, 105, 105)'),
               showline = TRUE,
               showgrid = FALSE,
-              range =c(100.000:2000.000),
+              range =c(50.000,500.000),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -3344,7 +3347,7 @@ xaxis <- list(title = "",
 yaxis <- list(title = "",
               showline = TRUE,
               showgrid = TRUE,
-              range =c(1:2),
+              range =c(1,3),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -3942,7 +3945,7 @@ yaxis <- list(title = "Primary customer *1000",
                               color = 'rgb(105, 105, 105)'),
               showline = TRUE,
               showgrid = FALSE,
-              #range =c(100.000:2000.000),
+              range =c(100.000,2000.000),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -3998,7 +4001,7 @@ xaxis <- list(title = "",
 yaxis <- list(title = "",
               showline = TRUE,
               showgrid = TRUE,
-              range =c(1:6),
+              range =c(1,3),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -4598,7 +4601,7 @@ yaxis <- list(title = "Primary customer *1000",
                               color = 'rgb(105, 105, 105)'),
               showline = TRUE,
               showgrid = FALSE,
-              range =c(100.000:2000.000),
+              range =c(100.000, 800.000),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -4606,8 +4609,8 @@ yaxis <- list(title = "Primary customer *1000",
               dtick = 50.000,
               ticks = 'inside',
               tickcolor = 'rgb(204, 204, 204)',
-              tickwidth = 1,
-              ticklen = 1,
+              #tickwidth = 1,
+              #ticklen = 1,
               tickfont = list(family = "ING me",
                               size = 12,
                               color = 'rgb(105, 105, 105)'))
@@ -4654,7 +4657,7 @@ xaxis <- list(title = "",
 yaxis <- list(title = "",
               showline = TRUE,
               showgrid = TRUE,
-              range =c(1:2),
+              range =c(1,3),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -5252,7 +5255,7 @@ yaxis <- list(title = "Primary customer *1000",
                               color = 'rgb(105, 105, 105)'),
               showline = TRUE,
               showgrid = FALSE,
-              #range =c(100.000:2000.000),
+              range =c(10.000,100.000),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -5260,7 +5263,7 @@ yaxis <- list(title = "Primary customer *1000",
               #dtick = 50.000,
               ticks = 'inside',
               tickcolor = 'rgb(204, 204, 204)',
-              tickwidth = 1,
+              #tickwidth = 1,
               ticklen = 1,
               tickfont = list(family = "ING me",
                               size = 12,
@@ -5308,7 +5311,7 @@ xaxis <- list(title = "",
 yaxis <- list(title = "",
               showline = TRUE,
               showgrid = TRUE,
-              range =c(1:2),
+              range =c(1,3),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -5905,7 +5908,7 @@ yaxis <- list(title = "Primary customer *1000",
                               color = 'rgb(105, 105, 105)'),
               showline = TRUE,
               showgrid = FALSE,
-              range =c(100.000:10000.000),
+              range =c(100.000,8000.000),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -5913,8 +5916,8 @@ yaxis <- list(title = "Primary customer *1000",
               #dtick = 50.000,
               ticks = 'inside',
               tickcolor = 'rgb(204, 204, 204)',
-              tickwidth = 1,
-              ticklen = 1,
+              #tickwidth = 1,
+              #ticklen = 1,
               tickfont = list(family = "ING me",
                               size = 12,
                               color = 'rgb(105, 105, 105)'))
@@ -5961,7 +5964,7 @@ xaxis <- list(title = "",
 yaxis <- list(title = "",
               showline = TRUE,
               showgrid = TRUE,
-              range =c(1:6),
+              range =c(1,6),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -6559,7 +6562,7 @@ yaxis <- list(title = "Primary customer *1000",
                               color = 'rgb(105, 105, 105)'),
               showline = TRUE,
               showgrid = FALSE,
-              range =c(100.000:6000.000),
+              range =c(100.000,4000.000),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -6567,8 +6570,8 @@ yaxis <- list(title = "Primary customer *1000",
               #dtick = 50.000,
               ticks = 'inside',
               tickcolor = 'rgb(204, 204, 204)',
-              tickwidth = 1,
-              ticklen = 1,
+              #tickwidth = 1,
+              #ticklen = 1,
               tickfont = list(family = "ING me",
                               size = 12,
                               color = 'rgb(105, 105, 105)'))
@@ -6615,7 +6618,7 @@ xaxis <- list(title = "",
 yaxis <- list(title = "",
               showline = TRUE,
               showgrid = TRUE,
-              range =c(1:6),
+              range =c(1,3),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -7214,7 +7217,7 @@ yaxis <- list(title = "Primary customer *1000",
                               color = 'rgb(105, 105, 105)'),
               showline = TRUE,
               showgrid = FALSE,
-              range =c(100.000:6000.000),
+              range =c(100.000,800.000),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -7222,8 +7225,8 @@ yaxis <- list(title = "Primary customer *1000",
               #dtick = 50.000,
               ticks = 'inside',
               tickcolor = 'rgb(204, 204, 204)',
-              tickwidth = 1,
-              ticklen = 1,
+              #tickwidth = 1,
+              #ticklen = 1,
               tickfont = list(family = "ING me",
                               size = 12,
                               color = 'rgb(105, 105, 105)'))
@@ -7271,7 +7274,7 @@ xaxis <- list(title = "",
 yaxis <- list(title = "",
               showline = TRUE,
               showgrid = TRUE,
-              range =c(1:6),
+              range =c(1,3),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -7869,7 +7872,7 @@ yaxis <- list(title = "Primary customer *1000",
                               color = 'rgb(105, 105, 105)'),
               showline = TRUE,
               showgrid = FALSE,
-              range =c(100.000:3000.000),
+              range =c(100.000,1000.000),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -7877,8 +7880,8 @@ yaxis <- list(title = "Primary customer *1000",
               #dtick = 50.000,
               ticks = 'inside',
               tickcolor = 'rgb(204, 204, 204)',
-              tickwidth = 1,
-              ticklen = 1,
+              #tickwidth = 1,
+             # ticklen = 1,
               tickfont = list(family = "ING me",
                               size = 12,
                               color = 'rgb(105, 105, 105)'))
@@ -7925,7 +7928,7 @@ xaxis <- list(title = "",
 yaxis <- list(title = "",
               showline = TRUE,
               showgrid = TRUE,
-              range =c(1:4),
+              range =c(1,3),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -8528,7 +8531,7 @@ yaxis <- list(title = "Primary customer *1000",
                               color = 'rgb(105, 105, 105)'),
               showline = TRUE,
               showgrid = FALSE,
-              range =c(100.000:3000.000),
+              range =c(100.000,1000.000),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -8536,8 +8539,8 @@ yaxis <- list(title = "Primary customer *1000",
               #dtick = 50.000,
               ticks = 'inside',
               tickcolor = 'rgb(204, 204, 204)',
-              tickwidth = 1,
-              ticklen = 1,
+              #tickwidth = 1,
+             # ticklen = 1,
               tickfont = list(family = "ING me",
                               size = 12,
                               color = 'rgb(105, 105, 105)'))
@@ -8584,7 +8587,7 @@ xaxis <- list(title = "",
 yaxis <- list(title = "",
               showline = TRUE,
               showgrid = TRUE,
-              range =c(1:4),
+              range =c(1,3),
               showticklabels = TRUE,
               linecolor = 'rgb(204, 204, 204)',
               linewidth = 2,
@@ -8958,6 +8961,10 @@ rep_brand <- test %>%
     pulse = pulse
   ) %>%
   distinct() %>%
+  dplyr::mutate(pulse = case_when(
+    quarter_measurement==19 ~ pulse /1.603,
+    TRUE ~ pulse
+  )) %>%
   # Gather across brands
   tidyr::spread(b_value, pulse) 
 
